tests/errors/first_stage/.string/not_printable/not_printable.as
; one of the characters in the string is not printable
unprintable: .string "Can't print this:	"